assets/css/style.css
/* ... */
.footer-right {
    width: 33%;
    float: right;
    text-align: center;
    margin: 0 auto;
}

.footer-left {
    width: 33%;
    float: left;
    text-align: center;
    margin: 0 auto;
}

.footer-center {
    width: 33%;
    text-align: center;
    margin: 0 auto;
}


/* footer social links */

.social-links {
    margin-top: 2px;
}

.social-links ul {
    display: inline-table;
    list-style-type: none;
}

.social-links li {
    display: inline-block;
}

.social-links a {
    color: rgb(182, 183, 186);
    padding: 10px;
    margin-top: 5px;
    margin: 20px;
    text-align: center;
}


/* home page */

section {
    padding: 20px;
    clear: both;
}

section p {
    margin: 20px;
    text-align: left;
    clear: both;
}


/* about us */

.two-columns {
    /* column-count: 2; */
    display: flex;
    align-items: center;
    text-align: justify;
    /* gap: 20px; */
    padding: 10px;
    width: 80%;
    margin: auto;
    box-shadow: 1px 1px 4px rgb(0 0 0 / 8%);
    border: 7px solid rgb(168, 169, 172, 0.2);
}

.two-columns div {
    width: 50%;
    padding: 10px;
}

.two-columns strong {
    background-color: rgba(167, 143, 24, 0.3);
    /* text-decoration: underline; */
    /* text-decoration-color: rgba(167, 143, 24); */
    /* text-decoration-style: double; */
}

#prot-d1 {
    width: 40%;
}

#prot-d2 {
    width: 60%;
}

.im-row {
    display: flex;
    flex-direction: row;
    width: 100%;
    float: left;
    clear: both;
    min-height: 300px;
}

.im-outer {
    width: 33%;
    border: 5px solid white;
    padding: 5px;
    clear: both;
    text-align: center;
}

.im-label:hover {
    color: #84333e;
}


/* services section */

.in-row-im {
    height: 250px;
    margin-top: 10px;
    margin-bottom: 10px;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
}

#service-img1 {
    background: url("../images/tierra-mallorca-JXI2Ap8dTNc-unsplash_resize_470x330.jpg") no-repeat center center;
}

#service-img2 {
    background: url("../images/marek-studzinski-ELXxMMSF_L8-unsplash-resized\ for\ site.jpg") no-repeat center center;
}

#service-img3 {
    background: url("../images/pexels-adrianna-calvo-17739_resized_470x330.jpg") no-repeat center center;
}


/* Why us - testimonies section */

#testimony-img1 {
    background: url("../images/pexels-kindel-media-7578931_resized.jpg") no-repeat center center;
}

#testimony-img2 {
    background: url("../images/pexels-mikhail-nilov-7735694_resized.jpg") no-repeat center center;
}

#testimony-img3 {
    background: url("../images/pexels-william-fortunato-resized.jpg") no-repeat center center;
}

.testimony-cont {
    background: rgba(38, 37, 40, 1);
    color: #fff9ec;
    font-style: italic;
    text-align: center;
    max-width: 450px;
    margin: 0;
}


/* Professional bodies */

#logos {
    margin-left: 20px;
}


/* _______services page*/


/* accordion styling - large */

.serv-container {
    width: 800px;
    margin: 20px auto;
    overflow: hidden;
    box-shadow: 1px 1px 4px rgb(0 0 0 / 8%);
    border: 7px solid rgb(168, 169, 172, 0.2);
}

.serv-container div {
    display: flex;
    color: rgb(38, 37, 40);
    background-color: white;
    position: absolute;
    padding: 10px;
    height: 500px;
    top: 0px;
    left: 70px;
    width: 460px;
    box-shadow: 0 0 0 1px rgb(255 255 255 / 60%);
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    -ms-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}

.serv-container>div {
    position: relative;
    left: 0 !important;
}

#mortgages label {
    padding: 0;
    margin: 0;
    height: 100%;
    text-align: center;
    line-height: 1.7em;
    font-size: 18px;
    color: rgb(38, 37, 40);
    /* margin: 0 20px 0 20px; */
    text-decoration: none;
    background-color: rgba(167, 143, 24, 0.5);
}

.accordion-h {
    display: inline-block;
    writing-mode: vertical-lr;
    transform: rotate(180deg);
    margin: 0;
    height: auto;
}

.accordion-p {
    text-align: center;
    vertical-align: middle;
    width: 350px;
    margin: auto;
}

.serv-container input,
.serv-container-sm input {
    display: none;
}

.serv-container input:checked~div {
    -webkit-transition: all 0.7s ease-in-out;
    -moz-transition: all 0.7s ease-in-out;
    -o-transition: all 0.7s ease-in-out;
    -ms-transition: all 0.7s ease-in-out;
    transition: all 0.7s ease-in-out;
    left: 460px;
}

#acc-1 {
    margin-left: 6px;
}

.acc-par-h {
    font-size: 20px;
    text-decoration-line: underline;
    text-decoration-color: #a78f18;
}


/* accordion styling - small */

#serv-container-small {
    display: none;
}

.serv-container-sm {
    width: 100%;
    margin: 0;
    box-shadow: 1px 1px 4px rgb(0 0 0 / 8%);
    border: 3px solid rgb(168, 169, 172, 0.2);
}

.serv-container-sm div {
    display: block;
    height: auto;
    width: auto;
}

.serv-container-sm label {
    display: block;
    cursor: pointer;
    padding: 5px;
}


/* .serv-container-sm label + input[type='radio'] {
    display: none;
}    */

#serv-container-small .accordion-p {
    display: none;
    /* padding:10px; */
    margin: auto;
}


/* Show content boxes when the radio buttons are checked */

#serv-container-small label+input[type='radio']:checked+.accordion-p {
    display: block;
    width: auto;
    text-align: justify;
    padding: 10px 5px;
}

#mortgage-img,
#equity-img,
#protection-img {
    height: 250px;
    margin: 20px;
}


/* #ft-buyers {
    background: url("../images/pexels-pnw-production-7327984_800x500.jpg") no-repeat center center;
} */

#equity-img {
    background: url("../images/pexels-tima-miroshnichenko-5699397_800x500.jpg") no-repeat center center;
}

#protection-img {
    background: url("../images/hands-protecting-a-house-picjumbo-com_800x500.jpg") no-repeat center center;
}
/* ... */

